media query + js

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div class="menu-btn"><i class="fa fa-bars fa-2x"></i></div>
     <div class="container">
         <!-- Nav -->
         <nav class="main-nav">
@@ -238,6 +239,12 @@
             </ul>
         </div>
     </footer>
+
+    <script>
+        document.querySelector('.menu-btn').addEventListener('click', () => {
+            document.querySelector('.main-menu').classList.toggle('show');
+        })
+    </script>
 </body>
 
 </html>
